force-app/main/default/objects/box__FRUP__c.object
<CustomObject>
    <fields>
        <fullName>Box_Update_Response__c</fullName>
        <inlineHelpText>Did Box get successfully updated with the new collaboration role?</inlineHelpText>
        <label>Box Update Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manually_Set_Role_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked and unchecked by process builder process.</inlineHelpText>
        <label>Manually Set Role Changed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manually_Set_Role__c</fullName>
        <inlineHelpText>Override the current role for this user using the dropdown list. The value in this field will move to the Role field once it has been updated in Box.</inlineHelpText>
        <label>Manually Set Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Box_Collaboration_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_User_Profile__c</fullName>
        <description>Used in the Update Permissions Apex Class to determine if the Salesforce User&apos;s Profile is System Administrator.</description>
        <formula>box__Salesforce_User__r.Profile.Name</formula>
        <inlineHelpText>System Administrators will always be editors.</inlineHelpText>
        <label>Salesforce User Profile</label>
        <type>Text</type>
    </fields>
</CustomObject>